Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- new Identifier Widget
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-